--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "include-media": "^1.4.9",
@@ -26,7 +27,7 @@
   "devDependencies": {
     "autoprefixer": "^9.1.3",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
