--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "include-media": "^1.4.9",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
+    "react-animated-css": "^1.0.4",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
