--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,10 @@
     "include-media": "^1.4.9",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
-    "react-animated-css": "^1.0.4",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
+    "react-sweet-progress": "^1.1.2",
     "react-toastify": "^4.2.3",
     "react-typed": "^1.0.9",
     "smoothscroll": "^0.4.0",
