--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^16.4.2",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.4.2",
+    "react-icons-kit": "^1.2.0",
     "react-router-dom": "^4.3.1",
     "react-sweet-progress": "^1.1.2",
     "react-toastify": "^4.2.3",
