--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
+    "google-map-react": "^1.0.9",
     "include-media": "^1.4.9",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
@@ -35,6 +36,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
