--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-sweet-progress": "^1.1.2",
     "react-toastify": "^4.2.3",
     "react-typed": "^1.0.9",
+    "really-smooth-scroll": "^2.1.1",
     "smoothscroll": "^0.4.0",
     "url-loader": "^1.1.1"
   },
