--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -w"
+    "build": "webpack -p"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "google-map-react": "^1.0.9",
+    "html-webpack-plugin": "^3.2.0",
     "include-media": "^1.4.9",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
