--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:rest-server": "cd rest-server && npm start",
     "start:smtp-server": "cd smtp-server && npm start",
     "setup:rest-server": "cd rest-server && npm start",
-    "buildEnv": "node bin/buildEnv.js"
+    "buildEnv": "node bin/buildEnv.js",
+    "build": "cd client && npm build"
   },
   "repository": {
     "type": "git",
