--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p"
+    "build": "webpack -w"
   },
   "keywords": [],
   "author": "",
