--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "cssnano": "^4.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
+    "idempotent-babel-polyfill": "^7.0.0",
     "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
