--- a/rest-server/package.json
+++ b/rest-server/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "idempotent-babel-polyfill": "^7.0.0"
   },
   "babel": {
     "presets": [
