--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
