--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:smtp-server": "cd smtp-server && npm start",
     "setup:rest-server": "cd rest-server && npm start",
     "buildEnv": "node bin/buildEnv.js",
-    "build": "cd client && npm build"
+    "build": "cd client && npm run-script build"
   },
   "repository": {
     "type": "git",
