--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -w"
+    "build": "webpack -p"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "google-map-react": "^1.0.9",
-    "html-webpack-plugin": "^3.2.0",
     "include-media": "^1.4.9",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
@@ -44,6 +43,7 @@
     "cssnano": "^4.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "idempotent-babel-polyfill": "^7.0.0",
     "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.2",
